Добавила на сайт связь по watsap

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Пузыри</title>
+    <script>
+    (function () { var widget = document.createElement('script'); widget.dataset.pfId = 'df65cfee-131a-4e09-b376-62da0162ac5e'; widget.src = 'https://widget.profeat.team/script/widget.js?id=df65cfee-131a-4e09-b376-62da0162ac5e&now='+Date.now(); document.head.appendChild(widget); })()
+    </script>
 </head>
 <body>
     <header class="header">
