--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
         <section class="header-section header-section--closed ">
             <div class="header-section__div">
-                <form action="send.php" method="GET">
+                <form action="b0.php" method="POST">
                     <h2 class="header-section__h2">Проверьте свою дату</h2>
                     <p class="header-section__p">Оставьте свой номер телефона, наш консультант перезвонит  Вам и расскажет о возможных сценариях Вашего мероприятия в нужную вам дату</p>
                     <input name="date" class="header-section__input _req" type="date" value placeholder="12.01.2023">
