--- a/index.html
+++ b/index.html
@@ -49,6 +49,45 @@
             </div>
         </section>
     </header>
+
+    <form action="#" name="form">
+        <div class="input-box">
+          <input
+            type="text"
+            placeholder="Ваше имя"
+            name="name"
+            id="name"
+            data-reg="^[А-ЯЁ][а-яё]*$"
+          />
+          <label for="name">Только русские буквы</label>
+        </div>
+        <div class="input-box">
+          <input
+            type="text"
+            placeholder="Введите email"
+            name="email"
+            id="email"
+            data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$"
+          />
+          <label for="email">В формате: name@mail.com</label>
+        </div>
+        <div class="input-box">
+          <input
+            type="text"
+            placeholder="Введите телефон"
+            name="phone"
+            id="phone"
+            data-reg="^((\+7|7|8)+([0-9]){10})$"
+          />
+          <label for="phone">В формате: 88000000000 или 78000000000</label>
+        </div>
+        <div class="input-box message-box">
+          <textarea placeholder="Сообщение"></textarea>
+        </div>
+        <div class="button">
+          <input type="submit" id="button" value="Отправить" />
+        </div>
+      </form>
     <script src="./script.js">
     </script>
     
