--- a/index.html
+++ b/index.html
@@ -1,95 +1,87 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Пузыри</title>
-    <script>
-    (function () { var widget = document.createElement('script'); widget.dataset.pfId = 'df65cfee-131a-4e09-b376-62da0162ac5e'; widget.src = 'https://widget.profeat.team/script/widget.js?id=df65cfee-131a-4e09-b376-62da0162ac5e&now='+Date.now(); document.head.appendChild(widget); })()
-    </script> 
-</head>
-<body>
-    <header class="header">
-        <ul class="header__ul">
-            <li class="header__li">
-                <a href="">
-                    <img src="" alt="">
-                    Пузыри
-                </a>
-            </li>
-            <li class="header__li">
-                Подарите себе и <br> родным сказку
-            </li>
-            <li class="header__li">
-                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" viewBox="0 0 512 512">
-                    <path d="M85.3 15.4c-8 2.6-13.8 7.5-36.9 30.8-24.7 25.1-27 28.1-31.6 42.8-2.1 6.7-2.3 9.4-2.3 25.5 0 21.6 1.8 31.4 10 56 20 60 62.8 125.2 121.5 184.9 57.8 58.9 121.7 103.6 181.3 127.1 45 17.6 84.2 20.2 109.2 7.2 4.7-2.4 11.4-8.4 30.6-27.6 29.5-29.4 30.4-30.8 30.4-46.1 0-15.9.5-15.3-42.9-58.7-39.8-39.8-41.6-41.3-53.2-43.2-3.4-.5-8.1-.5-11.2-.1-10.5 1.7-14.9 4.7-32.9 22.3-18.9 18.5-18.8 18.4-31.7 17.4-18.6-1.4-45.8-15.2-75.6-38.3-13.9-10.8-40.5-37-52-51.4-22.8-28.6-38.3-58.8-39.7-77.6-1-12.9-1-12.8 17.1-31.4 17.5-17.9 20.9-22.9 22.5-33.1 1.1-6.8-.1-14.4-3.4-21.7-2.2-4.9-7.9-11-39.8-42.8-42.4-42.3-42.7-42.5-57.1-43.1-5-.2-9.7.2-12.3 1.1zm19.3 14.2c4.9 2 74.5 71 77.6 76.9 2.9 5.5 2.9 14.6 0 20-1.1 2.2-7.2 9.1-13.4 15.2L157.5 153l-49-49-49-49L71 43.5c6.3-6.4 13.3-12.4 15.5-13.5 4.9-2.4 12.8-2.6 18.1-.4zm-5.3 84.2 48.8 48.8-2 6.2c-9.1 27 12.7 74 56 120.8 34.4 37.2 74.4 65.4 106.4 75 11.7 3.5 28.2 4 35.9 1l4.8-1.9 49.2 49.2 49.1 49.1-6.5 6.5c-12.1 12.2-24.3 16.1-47.4 15.2-16.4-.7-27.7-2.8-46.7-9.1C266.2 448.3 170 373.5 104 285.9c-46.7-62-73.9-122.7-75.7-168.4-.8-21.9 2.9-33.7 14.3-45.6 3.7-3.8 7-6.9 7.3-6.9.3 0 22.6 22 49.4 48.8zM406 330c5.4 2.8 74.6 72.7 76.5 77.2 2.1 5.1 1.9 13.4-.4 18.3-1.1 2.2-7 9.1-13.5 15.5L457 452.5l-49-49-49-49 10.8-10.8c11.2-11.3 15.3-14.5 20.6-15.8 4.2-1.1 11.3-.1 15.6 2.1zM247.4 64.7c-.6.4-1.7 1.9-2.3 3.1-1.5 2.8 0 7.7 2.7 8.7.9.3 7.7 1 15.1 1.6 46.5 3.3 86.7 22 119.1 55.6 13.6 14 22.7 26.6 30.9 42.3 12.8 24.9 19.1 48.1 20.7 76 .7 13.2 1.9 16 6.5 16 7.6 0 8.6-3.2 6.9-22.5-4.2-48.5-23.5-90.1-57.4-124.1-29.4-29.4-64.1-47.4-106.1-55-9.3-1.7-34.5-2.9-36.1-1.7z"/><path d="M246.6 124.3c-3.2 3.2-3.3 6.1-.3 9.1 2 1.9 3.7 2.4 11.7 2.9 55.8 3.4 101.9 42.8 114.5 98 .9 3.7 2 12 2.4 18.3 1 13 2.2 15.4 7.6 15.4 5.1 0 6.5-2.4 6.5-11.6 0-18-5.1-37.9-14.5-56.9-7.8-15.7-16.1-27-28.8-39.2-23.6-22.5-53.4-35.6-86.9-37.9-9.4-.7-9.7-.6-12.2 1.9zM249 180.8c-3 1-5 3.6-5 6.4 0 4.5 2.8 6.4 10.6 7.2 19 2 33 8.8 45.2 22.1 9.9 10.8 17.2 28.6 17.2 41.8 0 8.6 6.8 12.7 12 7.2 2.1-2.3 2.2-3 1.6-10.3-1.2-14.3-5.2-26.3-12.7-37.8-11.8-18-29.8-30.5-50-34.7-8.7-1.8-16.8-2.7-18.9-1.9z"/>
-                </svg>
-                <span>
-                    <a href="tel:+79219009797">+79219009797</a>
-                </span>
-            </li>
-            <li class="header__li header__li-button main-nav--nojs">
-                Забронировать
-            </li>
-        </ul>
-        <section class="header-section header-section--closed ">
-            <div class="header-section__div">
-                <form action="b0.php" method="POST">
-                    <h2 class="header-section__h2">Проверьте свою дату</h2>
-                    <p class="header-section__p">Оставьте свой номер телефона, наш консультант перезвонит  Вам и расскажет о возможных сценариях Вашего мероприятия в нужную вам дату</p>
-                    <input name="date" class="header-section__input _req" type="date" value placeholder="12.01.2023">
-                    <input name="name" class="header-section__input _req" type="text" placeholder="Как Вас зовут?">
-                    <input name="tel" class="header-section__input _req  _tel" type="tel" placeholder="Номер телефона">
-                    <input name="clock" class="header-section__input _req" type="text" placeholder="Когда Вам будет удобно принять звонок?">
-                    <button class="header-section__button button btn" type="submit">Жду звонка</button>
-                    <p class="header-section__p">Мы Вам перезвоним</p>
-                </form>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="content">
+        <div class="left-side">
+          <div class="address details">
+            <i class="fas fa-map-marker-alt"></i>
+            <div class="topic">Адрес</div>
+            <div class="text-one">г. Москва</div>
+            <div class="text-two">Пресненская наб., 8 стр. 1</div>
+          </div>
+          <div class="phone details">
+            <i class="fas fa-phone-alt"></i>
+            <div class="topic">Телефон</div>
+            <div class="text-one">8-800-000-00-00</div>
+            <div class="text-two">8-900-000-00-00</div>
+          </div>
+          <div class="email details">
+            <i class="fas fa-envelope"></i>
+            <div class="topic">Email</div>
+            <div class="text-one">support@site.com</div>
+            <div class="text-two">admin@site.com</div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div class="topic-text">Отправьте нам сообщение</div>
+          <p>
+            Если у вас есть какие-то вопросы или предложения по сотрудничеству -
+            заполните форму ниже
+          </p>
+          <form action="send_mail.php" name="form" method="POST">
+            <div class="input-box">
+              <input
+                type="text"
+                placeholder="Ваше имя"
+                name="name"
+                id="name"
+                data-reg="^[А-ЯЁ][а-яё]*$"
+              />
+              <label for="name">Только русские буквы</label>
             </div>
-        </section>
-    </header>
-
-    <form action="#" name="form">
-        <div class="input-box">
-          <input
-            type="text"
-            placeholder="Ваше имя"
-            name="name"
-            id="name"
-            data-reg="^[А-ЯЁ][а-яё]*$"
-          />
-          <label for="name">Только русские буквы</label>
+            <div class="input-box">
+              <input
+                type="text"
+                placeholder="Введите email"
+                name="email"
+                id="email"
+                data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$"
+              />
+              <label for="email">В формате: your-name@email.com</label>
+            </div>
+            <div class="input-box">
+              <input
+                type="text"
+                placeholder="Введите телефон"
+                name="phone"
+                id="phone"
+                data-reg="^((\+7|7|8)+([0-9]){10})$"
+              />
+              <label for="phone">В формате: 88000000000 или 78000000000</label>
+            </div>
+            <div class="input-box message-box">
+              <textarea placeholder="Сообщение" name="message"></textarea>
+            </div>
+            <div class="button">
+              <input type="submit" id="button" value="Отправить" />
+            </div>
+          </form>
         </div>
-        <div class="input-box">
-          <input
-            type="text"
-            placeholder="Введите email"
-            name="email"
-            id="email"
-            data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$"
-          />
-          <label for="email">В формате: name@mail.com</label>
-        </div>
-        <div class="input-box">
-          <input
-            type="text"
-            placeholder="Введите телефон"
-            name="phone"
-            id="phone"
-            data-reg="^((\+7|7|8)+([0-9]){10})$"
-          />
-          <label for="phone">В формате: 88000000000 или 78000000000</label>
-        </div>
-        <div class="input-box message-box">
-          <textarea placeholder="Сообщение"></textarea>
-        </div>
-        <div class="button">
-          <input type="submit" id="button" value="Отправить" />
-        </div>
-      </form>
-    <script src="./script.js">
-    </script>
-    
-</body>
+      </div>
+    </div>
+    <script
+      src="https://kit.fontawesome.com/fce9a50d02.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="app.js"></script>
+  </body>
 </html>
