Мобильная версия сайта. Шапка

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <input name="date" class="header-section__input _req" type="date" value placeholder="12.01.2023">
                     <input name="name" class="header-section__input _req" type="text" placeholder="Как Вас зовут?">
                     <input name="tel" class="header-section__input _req  _tel" type="tel" placeholder="Номер телефона">
-                    <input name="clock" class="header-section__input _req" type="text" placeholder="Когда Вам будет удобно принять звонок?">
+                    <!-- <input name="clock" class="header-section__input _req" type="text" placeholder="Когда Вам будет удобно принять звонок?"> -->
                     <button class="header-section__button button btn" type="submit">Жду звонка</button>
                     <p class="header-section__p">Мы Вам перезвоним</p>
                 </form>
