--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Пузыри</title>
+    <title>Аренда Иглу в Санкт-Петербурге от 500р/в час. В зелёной зоне Кудрово, парк Косая гора/ ПУЗЫРИ</title>
+    <meta name="description" content="Аренда купола Иглу в Санкт-Петербурге. Вместимость одного домика до 12 человек. Удобные диваны/кресла и большой стол." />
     <script>
     (function () { var widget = document.createElement('script'); widget.dataset.pfId = 'df65cfee-131a-4e09-b376-62da0162ac5e'; widget.src = 'https://widget.profeat.team/script/widget.js?id=df65cfee-131a-4e09-b376-62da0162ac5e&now='+Date.now(); document.head.appendChild(widget); })()
     </script> 
