--- a/test.html
+++ b/test.html
@@ -16,11 +16,11 @@
   position: relative;
 	width: 60vw;
 	height: 40vw;
-  max-width: 380px;
-  max-height: 250px;
+  max-width: 780px;
+  max-height: 550px;
   margin: 0;
   color: white;
-	perspective: 1000px;
+	perspective: 2000px;
   transform-origin: center;
 }
 
@@ -47,8 +47,8 @@
     bottom: 0;
 		width: 60vw;
 		height: 40vw;
-    max-width: 380px;
-    max-height: 250px;
+    max-width: 780px;
+    max-height: 550px;
     /* box-shadow: 0 5px 20px rgba(0,0,0,.1); */
 		border-radius: 6px;
     transform-origin: center;
@@ -157,9 +157,9 @@ main {
     <main>
         <figure class="icon-cards mt-3">
             <div class="icon-cards__content">
-              <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">🙂</span></div>
-              <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">😊</span></div>
-              <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">😀</span></div>
+              <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">Первое преимущество</span></div>
+              <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">Второе преимущество</span></div>
+              <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">Третье преимущество</span></div>
             </div>
           </figure>
           <script>
@@ -171,6 +171,9 @@ main {
 document.querySelector('#toggle-animation').addEventListener('click', classToggle);
           </script>
     </main>
+    <footer style="padding-top: 1000px;">
+        gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
+    </footer>
     
     <script src="./script.js">
     </script>
