--- a/index.html
+++ b/index.html
@@ -137,6 +137,23 @@
 
         </section>
     </main>
+    <footer class="footer">
+        <h2 class="footer__h2">Наши контакты</h2>
+        <ul class="footer__ul">
+            <li class="footer__li">
+                <a href="https://yandex.ru/maps/-/CCUvnPulHA">Новая ул., 6, Кудрово</a>
+            </li>
+            <li class="footer__li">
+                Ежедневно с 9:00 до 23:00
+            </li>
+            <li class="footer__li">
+                <a href="https://wa.me/89219009797">Связаться в WhatsApp</a>
+            </li>
+            <li class="footer__li">
+                <a href="https://telgg.me/@NaTusyR">Связаться в Telegram</a>
+            </li>
+        </ul>
+    </footer>
     <script>
         //Анимация при скроле
         const observer = new IntersectionObserver(entries => {
