--- a/MasterClass.html
+++ b/MasterClass.html
@@ -54,8 +54,10 @@
             </div>
         </section> --> 
     <!-- </header> -->
-    <main class="MK-main">
+    <header class="MK-main">
         <h2 class="MK-main__h2">Проведите время с ребенком <br> интересно</h2>
+    </header>
+    <main>
         <section class="MK-section">
             <img src="./imgmk/Risunok-kuritsa.jpg" alt="Рисунок">
             <div>
@@ -66,15 +68,16 @@
                 <a class="MK-main__button" href="#1">ПОДРОБНЕЕ</a>
             </div>
         </section>
-        <section class="MK-section--description" id="1">
-            <p class="MK-section__p-description">Проводим занятия с 10:30 до 11:30 один раз в неделю(подробнее уточняйте по телефону).
+    </main>
+    <footer class="MK-section--description" id="1">
+        <p class="MK-section__p-description">Проводим занятия с 10:30 до 11:30 один раз в неделю(подробнее уточняйте по телефону).
                  Записываем мамочек и деток (от 1,5 до 3 лет). Проводим занятия маленькими группами по 2 ребека с мамой. Длительность 
                  занятия 30 минут + 30 минут фотосессия после занятия в ПУЗЫРЕ.
-            </p>
-            <span class="MK-section__span-description">Цена: 1000 pyблей</span>  
-            <a class="MK-section__button-description" href="https://wa.me/+79811478827">Записаться</a>
-        </section>
-    </main>
+        </p>
+        <span class="MK-section__span-description">Цена: 1000 pyблей</span>  
+        <a class="MK-section__button-description" href="https://wa.me/+79811478827">Записаться</a>
+    </footer>
+    
     <script>
         //Анимация при скроле
         const observer = new IntersectionObserver(entries => {
