Скрыла кнопку подробнее

--- a/MasterClass.html
+++ b/MasterClass.html
@@ -65,11 +65,11 @@
                 <p class="MK-main__p">Проведите час с малышом в волшебном пузыре! Получите массу впечатлений и новые знакомства!
                 В подарок мастер класс по ручному мастерсву и фотосессия
                 </p>
-                <a class="MK-main__button" href="#1">ПОДРОБНЕЕ</a>
+                <!-- <a class="MK-main__button" href="#1">ПОДРОБНЕЕ</a> -->
             </div>
         </section>
     </main>
-    <footer class="MK-section--description" id="1">
+    <footer class="MK-section--description">
         <p class="MK-section__p-description">Проводим занятия с 10:30 до 11:30 один раз в неделю(подробнее уточняйте по телефону).
                  Записываем мамочек и деток (от 1,5 до 3 лет). Проводим занятия маленькими группами по 2 ребека с мамой. Длительность 
                  занятия 30 минут + 30 минут фотосессия после занятия в ПУЗЫРЕ.
