--- a/photo.html
+++ b/photo.html
@@ -55,26 +55,43 @@
         </section> --> 
     <!-- </header> -->
     <header class="MK-main">
-        <h2 class="MK-main__h2">Проведите время с ребенком <br> интересно</h2>
+        <h2 class="MK-main__h2 MK-main__h2-photo">Запись на фото-день <br> с малышом <br> (1.5 -3 года)</h2>
     </header>
     <main>
-        <section class="MK-section">
+        <!-- <section class="MK-section">
             <img class="MK-section-img" src="./imgmk/Risunok-kuritsa.jpg" alt="Рисунок">
             <div>
-                <h2 class="MK-main__h2-one">Мы ждем Вас! Маленькие пузырики</h2>
-                <p class="MK-main__p">Проведите час с малышом в волшебном пузыре! Получите массу впечатлений и новые знакомства!
-                В подарок мастер класс по ручному мастерсву и фотосессия
+                <h2 class="MK-main__h2-one">Что Вы получаете</h2>
+                <p class="MK-main__p">
+                     30 минут сьемка в ПУЗЫРЕ и на улице. 20 фото с обработке. Можно придти  большой семьей, или мама с ребенком
                 </p>
-                <!-- <a class="MK-main__button" href="#1">ПОДРОБНЕЕ</a> -->
+                <a class="MK-main__button" href="#1">ПОДРОБНЕЕ</a> 
+            </div>
+        </section> -->
+        <section class="photo-section">
+            <h2 class="photo-section__h2">Наш фотограф</h2>
+            <div class="photo-section__div">
+                <img class="photo-section__img" src="./imgmk/d5928569-9906-46df-a33b-3a2425c38f30.jpg" alt="Фото фотографа" width="100%" height="450px">
+                <p class="photo-section__p">Занимаюсь фотографией с 2016 года. Я мама, поэтому знаю как важно найти контакт с малышом. И какждая моя сьемка 
+                    для ребенка это игра. Я люблю живые фото. Постановочные делаю только семейные портреты.
+                </p>
+            </div>
+        </section>
+        <section class="photo-section__photo">
+            <h2 class="photo-section__h2">Работы фотографа</h2>
+            <div class="photo-section__photo-div">
+                <img class="photo-section__img" src="./imgmk/sWltezstaHY.jpg" alt="Малыш" width="300px" height="320px">
+                <img class="photo-section__img" src="./imgmk/nveaf3Lb_IU.jpg" alt="Фото в казино" width="300px" height="320px">
+                <img class="photo-section__img" src="./imgmk/67DFKbl8gC0.jpg" alt="Фото девочки" width="300px" height="320px">
+                <img class="photo-section__img" src="./imgmk/8kMsWj2hZC4.jpg" alt="Фото девушки" width="300px" height="320px">
+                <img class="photo-section__img" src="./imgmk/xRjdpUAb7Vw.jpg" alt="Дети" width="300px" height="320px">
             </div>
         </section>
     </main>
     <footer class="MK-section--description">
-        <p class="MK-section__p-description">Проводим занятия с 10:30 до 11:30 один раз в неделю(подробнее уточняйте по телефону).
-                 Записываем мамочек и деток (от 1,5 до 3 лет). Проводим занятия маленькими группами по 2 ребека с мамой. Длительность 
-                 занятия 30 минут + 30 минут фотосессия после занятия в ПУЗЫРЕ.
+        <p class="MK-section__p-description">Время проведения 12:00. 30 минут съемка в ПУЗЫРЕ и на улице. 20 фото с обработке. Можно придти  большой семьей, или мама с ребенком
         </p>
-        <span class="MK-section__span-description">Цена: 1000 pyблей</span>  
+        <span class="MK-section__span-description">Цена: 750 pyблей</span>  
         <a class="MK-section__button-description" href="https://wa.me/+79811478827">Записаться</a>
     </footer>
     
@@ -91,7 +108,7 @@
         });
         });
         observer.observe(document.querySelector('.MK-main__h2')); 
-        observer.observe(document.querySelector('.MK-section'));
+        observer.observe(document.querySelector('.photo-section'));
     </script>  
 </body>
 </html> 
