--- a/photo.html
+++ b/photo.html
@@ -72,7 +72,7 @@
             <h2 class="photo-section__h2">Наш фотограф</h2>
             <div class="photo-section__div">
                 <img class="photo-section__img" src="./imgmk/d5928569-9906-46df-a33b-3a2425c38f30.jpg" alt="Фото фотографа" width="100%" height="450px">
-                <p class="photo-section__p">Занимаюсь фотографией с 2016 года. Я мама, поэтому знаю как важно найти контакт с малышом. И какждая моя сьемка 
+                <p class="photo-section__p">Занимаюсь фотографией с 2016 года. Я мама, поэтому знаю как важно найти контакт с малышом. И каждая моя сьемка 
                     для ребенка это игра. Я люблю живые фото. Постановочные делаю только семейные портреты.
                 </p>
             </div>
@@ -89,7 +89,7 @@
         </section>
     </main>
     <footer class="MK-section--description">
-        <p class="MK-section__p-description">Время проведения 12:00. 30 минут съемка в ПУЗЫРЕ и на улице. 20 фото с обработке. Можно придти  большой семьей, или мама с ребенком
+        <p class="MK-section__p-description">Время проведения 12:00. 30 минут съемка в ПУЗЫРЕ и на улице. 20 фото с обработке. Можно прийти  большой семьей, или мама с ребенком
         </p>
         <span class="MK-section__span-description">Цена: 750 pyблей</span>  
         <a class="MK-section__button-description" href="https://wa.me/+79811478827">Записаться</a>
