Обновила анонс по мк

--- a/MasterClass.html
+++ b/MasterClass.html
@@ -62,10 +62,33 @@
             <img class="MK-section-img" src="./imgmk/Risunok-kuritsa.jpg" alt="Рисунок">
             <div>
                 <h2 class="MK-main__h2-one">Мы ждем Вас! Маленькие пузырики</h2>
-                <p class="MK-main__p">Проведите час с малышом в волшебном пузыре! Получите массу впечатлений и новые знакомства!
-                В подарок мастер класс по ручному мастерсву и фотосессия
+                <p class="MK-main__p">Приходите с малышом на мастер класс по ручному мастерсву в волшебном пузыре!
+                     Получите массу впечатлений и новые знакомства!
+                В подарок  30 минутная фотосессия.
                 </p>
                 <!-- <a class="MK-main__button" href="#1">ПОДРОБНЕЕ</a> -->
+            </div>
+        </section>
+        <section class="MK-section">
+            <div>
+                <h2 class="MK-main__h2-one">Давайте знакомиться!</h2>
+                <p class="MK-main__p">
+                    Меня зовут Светлана, я мама. Как только у меня появился ребенок я для себя открыла мир ручного мастерства. Данное рукоделие
+                    прекрасно развивает мелкую моторику рук, а в дальнейшем и речь ребенка. Хочу поделиться своими идеями для занятий с ребенком.
+                    30 минутное занятие не утомит Вашего малыша. Занятие поделено на два этапа. Первый этап- это рукоделие. Второй этап- это динамическая игра
+                </p>
+                <!-- <a class="MK-main__button" href="#1">ПОДРОБНЕЕ</a> -->
+            </div>
+            <img class="MK-section-img MK-section-img-one" src="./imgmk/photo_2023-01-20_21-36-56.jpg" alt="Рисунок" width="100%" height="700px">
+        </section>
+        <section class="photo-section__photo photo-section__photo-one">
+            <h2 class="photo-section__h2">Работы фотографа</h2>
+            <div class="photo-section__photo-div photo-section__photo-div-one">
+                <img class="photo-section__img" src="./imgmk/1R4SA21zu2o.jpg" alt="Малыш" width="300px" height="400px">
+                <!-- <img class="photo-section__img" src="./imgmk/nveaf3Lb_IU.jpg" alt="Фото в казино" width="300px" height="320px"> -->
+                <img class="photo-section__img" src="./imgmk/67DFKbl8gC0.jpg" alt="Фото девочки" width="300px" height="400px">
+                <img class="photo-section__img" src="./imgmk/8kMsWj2hZC4.jpg" alt="Фото девушки" width="300px" height="400px">
+                <img class="photo-section__img" src="./imgmk/xRjdpUAb7Vw.jpg" alt="Дети" width="300px" height="400px">
             </div>
         </section>
     </main>
