--- a/MasterClass.html
+++ b/MasterClass.html
@@ -69,7 +69,7 @@
                 <!-- <a class="MK-main__button" href="#1">ПОДРОБНЕЕ</a> -->
             </div>
         </section>
-        <section class="MK-section">
+        <section class="MK-section MK-section-one">
             <div>
                 <h2 class="MK-main__h2-one">Давайте знакомиться!</h2>
                 <p class="MK-main__p">
@@ -115,6 +115,8 @@
         });
         observer.observe(document.querySelector('.MK-main__h2')); 
         observer.observe(document.querySelector('.MK-section'));
+        observer.observe(document.querySelector('.MK-section-one'));
+        observer.observe(document.querySelector('.photo-section__photo-one'));
     </script>  
 </body>
 </html> 
