--- a/MasterClass.html
+++ b/MasterClass.html
@@ -73,7 +73,7 @@
             <div>
                 <h2 class="MK-main__h2-one">Давайте знакомиться!</h2>
                 <p class="MK-main__p">
-                    Меня зовут Светлана, я мама. Как только у меня появился ребенок я для себя открыла мир ручного мастерства. Данное рукоделие
+                    Меня зовут Светлана, я мама. Как только у меня появился ребенок, я для себя открыла мир ручного мастерства. Данное рукоделие
                     прекрасно развивает мелкую моторику рук, а в дальнейшем и речь ребенка. Хочу поделиться своими идеями для занятий с ребенком.
                     30 минутное занятие не утомит Вашего малыша. Занятие поделено на два этапа. Первый этап- это рукоделие. Второй этап- это динамическая игра
                 </p>
