Изменила анонс про фото

--- a/photo.html
+++ b/photo.html
@@ -55,7 +55,7 @@
         </section> --> 
     <!-- </header> -->
     <header class="MK-main">
-        <h2 class="MK-main__h2 MK-main__h2-photo">Запись на фото-день <br> с малышом <br> (1.5 -3 года)</h2>
+        <h2 class="MK-main__h2 MK-main__h2-photo">Запись на фото-день</h2>
     </header>
     <main>
         <!-- <section class="MK-section">
@@ -72,7 +72,8 @@
             <h2 class="photo-section__h2">Наш фотограф</h2>
             <div class="photo-section__div">
                 <img class="photo-section__img" src="./imgmk/d5928569-9906-46df-a33b-3a2425c38f30.jpg" alt="Фото фотографа" width="100%" height="450px">
-                <p class="photo-section__p">Занимаюсь фотографией с 2016 года. Я мама, поэтому знаю как важно найти контакт с малышом. И каждая моя сьемка 
+                <p class="photo-section__p">Занимаюсь фотографией с 2016 года. Делала сьемки для больших семей и индивидуальную, снимала влюбленные пары
+                     Я мама, поэтому знаю как важно найти контакт с малышом. И каждая моя сьемка 
                     для ребенка это игра. Я люблю живые фото. Постановочные делаю только семейные портреты.
                 </p>
             </div>
@@ -80,18 +81,25 @@
         <section class="photo-section__photo">
             <h2 class="photo-section__h2">Работы фотографа</h2>
             <div class="photo-section__photo-div">
-                <img class="photo-section__img" src="./imgmk/sWltezstaHY.jpg" alt="Малыш" width="300px" height="320px">
+                <!-- <img class="photo-section__img" src="./imgmk/sWltezstaHY.jpg" alt="Малыш" width="300px" height="320px">
                 <img class="photo-section__img" src="./imgmk/nveaf3Lb_IU.jpg" alt="Фото в казино" width="300px" height="320px">
                 <img class="photo-section__img" src="./imgmk/67DFKbl8gC0.jpg" alt="Фото девочки" width="300px" height="320px">
                 <img class="photo-section__img" src="./imgmk/8kMsWj2hZC4.jpg" alt="Фото девушки" width="300px" height="320px">
-                <img class="photo-section__img" src="./imgmk/xRjdpUAb7Vw.jpg" alt="Дети" width="300px" height="320px">
+                <img class="photo-section__img" src="./imgmk/xRjdpUAb7Vw.jpg" alt="Дети" width="300px" height="320px"> -->
+                <img class="photo-section__img" src="./imgmk/IMG_6102.jpg" alt="Малыш" width="500px" height="620px">
+                <img class="photo-section__img" src="./imgmk/IMG_5989.jpg" alt="Фото в казино" width="500px" height="620px">
+                <img class="photo-section__img" src="./imgmk/IMG_5811.jpg" alt="Фото девочки" width="500px" height="620px">
+                <img class="photo-section__img" src="./imgmk/IMG_5854-2.jpg" alt="Фото девушки" width="500px" height="620px">
+                <img class="photo-section__img" src="./imgmk/IMG_6154.jpg" alt="Дети" width="500px" height="620px">
+                <img class="photo-section__img" src="./imgmk/IMG_5940.jpg" alt="Дети" width="500px" height="620px">
             </div>
         </section>
     </main>
     <footer class="MK-section--description">
-        <p class="MK-section__p-description">Время проведения 12:00. 30 минут съемка в ПУЗЫРЕ и на улице. 20 фото с обработке. Можно прийти  большой семьей, или мама с ребенком
+        <p class="MK-section__p-description">Время проведения 12:00. 30 минут съемка в ПУЗЫРЕ и на улице. 20 фото в обработке. 
+            Можно прийти  большой семьей, или мама с ребенком, одному или со второй половинкой. Ждем Вас!
         </p>
-        <span class="MK-section__span-description">Цена: 750 pyблей</span>  
+        <span class="MK-section__span-description">Цена:  1250 pyблей</span>  
         <a class="MK-section__button-description" href="https://wa.me/+79811478827">Записаться</a>
     </footer>
     
