Добавила другое фото

--- a/14.html
+++ b/14.html
@@ -15,7 +15,8 @@
     </header>
     <main>
         <section class="MK-section">
-            <img class="MK-section-img14" src="./imgmk/cf49d432e5e9596430d0628371uf--kartiny-i-panno-kartiny-kartina-vlyublennye.jpg" alt="Рисунок">
+            <!-- <img class="MK-section-img14" src="./imgmk/photo_2023-01-25_22-18-28.jpg" alt="Рисунок"> -->
+            <img class="MK-section-img14" src="./imgmk/1.jpg" alt="Рисунок">
             <div>
                 <p class="MK-main__p">
                     Мы  предлагаем Влюбленным воспользоваться шансом и побыть вдвоем, отодвинуть суету, 
